@@ -34,9 +34,7 @@
   
   <path id="path.mps.ant.path">
     <pathelement location="${artifacts.mps}/lib/ant/lib/ant-mps.jar" />
-    <fileset dir="${artifacts.mps}/lib">
-      <include name="util-8.jar" />
-    </fileset>
+    <pathelement location="${artifacts.mps}/lib/util-8.jar" />
   </path>
   
   <taskdef resource="jetbrains/mps/build/ant/antlib.xml" classpathref="path.mps.ant.path" />
@@ -175,7 +173,6 @@
       <plugin path="${artifacts.org.mpsqa.base}/org.mpsqa.base.build" id="org.mpsqa.base.build" />
       <plugin path="${artifacts.org.mpsqa.testing}/org.mpsqa.testing" id="org.mpsqa.testing" />
       <plugin path="${artifacts.org.mpsqa.testing}/org.mpsqa.testing.build" id="org.mpsqa.testing.build" />
-      <library file="${artifacts.mps}/languages/editor/jetbrains.mps.ide.editor.jar" />
       <chunk>
         <module file="${basedir}/jacoco.sandbox/jacoco.sandbox.msd" />
         <module file="${basedir}/jacoco.sandbox.build/jacoco.sandbox.build.msd" />
@@ -184,7 +181,6 @@
       <jvmargs>
         <arg value="-ea" />
         <arg value="-Xmx512m" />
-        <arg value="--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
       </jvmargs>
       <macro name="mps.home" path="${mps.home}" />
       <macro name="mpsqa.home" path="${mpsqa.home}" />
@@ -265,8 +261,6 @@
         <fileset file="${artifacts.mps}/lib/mps-generator.jar" />
         <fileset file="${artifacts.mps}/lib/mps-project-check.jar" />
         <fileset file="${artifacts.mps}/lib/mps-test.jar" />
-        <fileset file="${artifacts.mps}/lib/ant/lib/ant.jar" />
-        <fileset file="${artifacts.mps}/lib/junit4.jar" />
         <fileset file="${artifacts.mps}/lib/app.jar" />
         <fileset file="${artifacts.mps}/lib/app-client.jar" />
         <fileset file="${artifacts.mps}/lib/lib.jar" />
@@ -276,13 +270,45 @@
         <fileset file="${artifacts.mps}/lib/util-8.jar" />
         <fileset file="${artifacts.mps}/lib/forms_rt.jar" />
         <fileset file="${artifacts.mps}/lib/java-frontback.jar" />
-        <fileset file="${artifacts.mps}/lib/java-impl.jar" />
         <fileset file="${artifacts.mps}/lib/jps-model.jar" />
         <fileset file="${artifacts.mps}/lib/testFramework.jar" />
         <fileset file="${artifacts.mps}/lib/stats.jar" />
+        <fileset file="${artifacts.mps}/lib/hamcrest.jar" />
         <fileset file="${artifacts.mps}/lib/platform-loader.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.asm.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.fastutil.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.gson.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.kotlinx.collections.immutable.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.kotlinx.coroutines.core.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.miglayout.swing.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.netty.buffer.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.netty.codec.http.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.libraries.swingx.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.analysis.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.analysis.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.builtInServer.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.builtInServer.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.core.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.core.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.core.ui.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.debugger.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.diff.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.ide.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.ide.core.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.ide.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.lang.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.lang.core.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.lang.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.locking.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.projectFrame.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.projectModel.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.projectModel.impl.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.util.ex.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.util.ui.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.vcs.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.platform.vcs.core.jar" />
+        <fileset file="${artifacts.mps}/lib/intellij.xml.parser.jar" />
         <fileset file="${artifacts.mps}/lib/annotations.jar" />
-        <fileset file="${artifacts.mps}/lib/trove.jar" />
         <fileset file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.jar" />
         <fileset file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.classifiers.jar" />
         <fileset file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.scopes.jar" />
@@ -293,17 +319,19 @@
         <fileset file="${artifacts.mps}/plugins/mps-testing/languages/languageDesign/jetbrains.mps.lang.test.matcher.jar" />
         <fileset file="${artifacts.mps}/plugins/mps-testing/languages/languageDesign/jetbrains.mps.lang.test.runtime.jar" />
         <fileset file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.traceable.jar" />
+        <fileset file="${artifacts.mps}/lib/ant/lib/ant.jar" />
+        <fileset file="${artifacts.mps}/lib/junit4.jar" />
         <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="apiguardian-api-1.1.2.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-api-5.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-engine-5.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-migrationsupport-5.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-params-5.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-commons-1.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-engine-1.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-launcher-1.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-vintage-engine-5.9.3.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="opentest4j-1.2.0.jar" />
-        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-reporting-1.9.3.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-api-5.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-engine-5.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-migrationsupport-5.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-jupiter-params-5.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-commons-1.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-engine-1.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-launcher-1.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-vintage-engine-5.13.4.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="opentest4j-1.3.0.jar" />
+        <fileset dir="${artifacts.mps}/plugins/mps-junit5/lib" includes="junit-platform-reporting-1.13.4.jar" />
       </classpath>
     </javac>
     <copy todir="${build.tmp}/java/out/jacoco.sandbox.tests">
